# KurRabota

SecStorage/: CMakeLists.txt  client.cpp
SecStorage/src/: acl_utils.cpp  acl_utils.h  file_utils.cpp  file_utils.h  main.cpp  socket_utils.cpp  socket_utils.h
SecStorageLib/: CMakeLists.txt  SecStorageLib.pc.in
SecStorageLib/include/: common.h  daemon_api.h
SecStorageLib/src/: common.cpp  daemon_api.cpp  utils.cpp  utils.h
